==================
 Docutils History
==================

:Author: David Goodger; open to all Docutils developers
:Contact: docutils-develop@lists.sourceforge.net
:Date: $Date$
:Revision: $Revision$
:Web site: https://docutils.sourceforge.io/
:Copyright: This document has been placed in the public domain.

.. contents::

Changes Since 0.18
==================

.

Release 0.18 (2021-10-26)
=========================

* docutils/nodes.py

  - Don't change a list while looping over it (in
    document.set_name_id_map()). Thanks to Mickey Endito.

* docutils/parsers/recommonmark_wrapper.py

  - Test and update to work with recommonmark version 0.6.0.
    Still experimental.

    Unfortunately, recommonmark_ is `no longer maintained`__.

    __ https://github.com/readthedocs/recommonmark/issues/221

* docutils/parsers/rst/directives/misc.py

  - Fix bug #424 Wrong circular inclusion detection.
    Use a "magic" comment instead of line numbers
    to keep a log of recursive inclusions.

* docutils/parsers/rst/states.py

  -  Use a "magic" comment to update the log of recursive inclusions.

* docutils/writers/html5_polyglot/__init__.py

  - New option "image_loading". Support "lazy" loading of images.
    Obsoletes "embed_images".

* docutils/writers/pseudoxml.py:

  - Fix spelling of option "detailed".

* tools/docutils-cli.py

  - Read settings from standard configuration files.

Fix spelling errors in documentation and docstrings. 
Thanks to Dimitri Papadopoulos.


Release 0.18b1 (2021-10-05)
===========================

* docutils/frontend.py

  - The default value for the "auto_id_prefix" setting changed to "%":
    auto-generated IDs use the tag name as prefix.

* docutils/nodes.py

  - Make meta__ a standard Docutils doctree node. Writers may ignore
    "meta" nodes if they are not supported by the output format.

    __ docs/ref/doctree.html#meta

  - document.make_id(): Do not strip leading number and hyphen characters