@@ -312,7 +312,7 @@ span.textsc {
 	font-variant: small-caps;
 }
 span.textsl {
-	font-style: obligue;
+	font-style: oblique;
 }
 
 /* Colors */
